--- a/gb/24/6/27/n14278861.md
+++ b/gb/24/6/27/n14278861.md
@@ -161,7 +161,7 @@
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278853.md#1">美航母打击群视频揭示红海前线战斗激烈</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/25/n14277203.md#1">【直播】美国总统大选首场辩论登场</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/01/05/a102745738.md#1" target="_blank">响彻世界政坛的正义之声</a>  </li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/10/n10966582.md#1" target="_blank">林辉：文革一个为妻子报仇的普通军人之死</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/14/10/30/n4283873.md#1" target="_blank">方林达：法轮功参与政治了吗？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/9/10/n10702629.md#1" target="_blank">【还原史实】反右运动 中国知识分子惨遭摧折</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/7/n11240713.md#1" target="_blank">神灵赐福 巴西一企业稳步发展壮大</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/24/n14276301.md#1">台湾古典诗：杉林溪绣球花</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277524.md#1">她的过去和现在：用舞蹈完成父亲遗愿</a></li>
